# kervana-cartography

./: .env.example  .gitignore  CLAUDE.md  PHASE2_TASK.md  PHASE3_BACKEND_TASK.md  PHASE3_FRONTEND_TASK.md  PHASE4_TASK.md  README.md  RUN_PHASE4.sh  TASK.md  biome.json  components.json  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: AI_INTEGRATION_DESIGN.md  TESTING_PLAN.md
e2e/: app.spec.ts  tauri-mock.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  import.rs  main.rs  seed.rs
src-tauri/src/ai/: embeddings.rs  mod.rs  models.rs  prompts.rs  research.rs  service.rs
src/actions/: edges.ts  embeddings.ts  import.ts  nodes.ts  research.ts
src/actions/__tests__/: edges.test.ts  nodes.test.ts  research.test.ts
src/app/: App.tsx  index.css
src/components/ui/: button.tsx
src/features/canvas/: add-node-dialog.tsx  auto-layout.ts  canvas-context-menu.tsx  market-canvas.tsx
src/features/editor/: editor-toolbar.tsx  note-editor.tsx  plate-editor.tsx
src/features/errors/: error-toast.tsx
src/features/export/: export-markdown.ts
src/features/import/: import-dialog.tsx
src/features/research/: research-panel.tsx
src/features/sidebar/: app-sidebar.tsx
src/features/stats/: stats-panel.tsx
src/features/statusbar/: status-bar.tsx
src/features/toolbar/: app-toolbar.tsx
src/hooks/: use-dark-mode.ts  use-keyboard-shortcuts.ts
src/lib/: error-store.ts  research-store.ts  store.ts  tauri.ts  utils.ts
src/test/: setup.ts
src/types/: market.ts
(+33 files in other folders)
