[package]
name = "kervana-cartography"
version = "0.1.0"
description = "Market research and validation tool"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.2", features = [] }
tauri-plugin-shell = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread"] }

[dev-dependencies]
mockito = "1.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-shell = "2.1"
